fix overflow

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body::-webkit-scrollbar-thumb {
     /*transition: height 1s ease;*/
     /*animation: fullHeight 1s ease 4.0s forwards;*/
     z-index: 10;
-    margin-bottom: -0.5rem;
+    /*margin-bottom: -0.5rem;*/
 }
 
 /*.slideshow-content.visible {*/
@@ -80,7 +80,8 @@ body::-webkit-scrollbar-thumb {
     /*background-image: url('http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_527bf56961712_1.JPG');*/
     /*width: 1200px;*/
     /*height: 800px;*/
-    height: 100%;
+    height: 110%;
+    margin-top:-1%;
 
     background-repeat: no-repeat;
     background-position: center;
